# aicrew

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
features/: FEATURE1.md
src/: agent.py  catalog_explorer.py  config.py  orchestrator.py  skill_cache.py  skill_injector.py  telemetry.py
src/execution/: deno_runner.py  subagents.py
src/models/: plan.py  results.py  skill.py
src/skills/: plan_management.py
tests/: conftest.py  test_agent.py  test_catalog_explorer.py  test_e2e.py  test_orchestrator.py  test_plan_management.py  test_skill_cache.py  test_skill_injector.py  test_subagents.py
tests/execution/: test_deno_runner.py
wiki/: confidence.json  graph.json  index.md  log.md
wiki/concepts/: additionalproperties_false.md  adk_agent_patterns.md  adk_functiontool.md  agent.md  agentic_platform.md  aiagentscrew.md  allow_net_validation.md  alternatives_considered.md  anthropic_tool_definition_schema.md  anthropic_tool_schema.md  anthropic_tool_standard.md  async_handling.md  async_subprocess_with_hard_timeout.md  asyncio_subprocess_with_timeout_and_cleanup.md  asyncio_vs_subprocess_threading.md  automated_skill_publishing_pipeline.md  basc.md  bm25_weight.md  cache_indexada_localmente.md  calculator.md  catalogskill.md  (+209 more)
(+109 files in other folders)
