[project]
name = "aiagentscrew"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-adk==1.33.0",
    "google-genai>=1.72,<2",
    "pydantic>=2.12,<3",
    "pyyaml>=6.0.2,<7",
    "httpx>=0.27,<1",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
